[package]
name = "dalfs"
version = "0.0.1"
edition = "2021"
description = "A Userspace filesystem based on OpenDAL"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
opendal = "0.40"
anyhow = "1.0.75"
fuse = "0.3.1"
env_logger = "0.10.0"
libc = "0.2.147"
time = "0.1"
sequence_trie = "0.0.13"
chrono = "0.4.30"
log = "0.4.20"
