[package]
name = "dalfs"
version = "0.1.0"
edition = "2021"
description = "A Userspace filesystem based on OpenDAL"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
opendal = "0.41.0"
fuser = "0.13.0"
env_logger = "0.10.0"
libc = "0.2.147"
sequence_trie = "0.3.6"
chrono = "0.4.30"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
tap = "1.0.1"
